# kiara_plugin.develop

./: .cruft.json  .gitignore  .pre-commit-config.yaml  Makefile  README.md  mkdocs.yml  pixi.toml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build-darwin.yaml  build-linux.yaml  build-windows.yaml
0.4.0/reference/SUMMARY/: index.html
0.4.0/reference/kiara_plugin/develop/__init__/: index.html
0.4.0/reference/kiara_plugin/develop/defaults/: index.html
0.4.0/reference/kiara_plugin/develop/interfaces/__init__/: index.html
0.4.0/reference/kiara_plugin/develop/models/: index.html
0.4.0/reference/kiara_plugin/develop/modules/__init__/: index.html
0.4.0/reference/kiara_plugin/develop/schema/flatbuffers/: index.html
0.4.0/search/: search_index.json
0.4.0/usage/: index.html
0.4.1/development/: index.html
0.4.1/info/SUMMARY/: index.html
0.4.1/info/data_types/: index.html
0.4.1/info/module_types/: index.html
0.4.1/reference/SUMMARY/: index.html
0.4.1/reference/kiara_plugin/develop/conda/models/: index.html
0.4.1/search/: search_index.json
0.4.1/usage/: index.html
0.4.2/SUMMARY/: index.html
0.4.2/info/SUMMARY/: index.html
0.4.2/info/data_types/: index.html
0.4.2/info/operations/: index.html
0.4.2/reference/kiara_plugin/develop/__init__/: index.html
0.4.2/reference/kiara_plugin/develop/conda/__init__/: index.html
0.4.2/reference/kiara_plugin/develop/conda/models/: index.html
0.4.2/reference/kiara_plugin/develop/data_types/: index.html
0.4.2/reference/kiara_plugin/develop/defaults/: index.html
0.4.2/reference/kiara_plugin/develop/interfaces/__init__/: index.html
0.4.2/reference/kiara_plugin/develop/models/: index.html
0.4.2/reference/kiara_plugin/develop/modules/__init__/: index.html
0.4.2/reference/kiara_plugin/develop/pipelines/__init__/: index.html
0.4.2/reference/kiara_plugin/develop/utils/: index.html
ci/conda/: conda-pkg-patch.yaml
ci/conda/kiara_plugin.develop/: meta.yaml.template
docs/: SUMMARY.md  index.md  usage.md
docs/development/core/: index.md
examples/jobs/: example_job.yaml  example_job_develop.yaml  simple_1.yaml
kiara_plugin.{{ cookiecutter.project_slug }}/: .gitignore  .pre-commit-config.yaml  mkdocs.yml  pixi.toml  pyproject.toml  setup.cfg  setup.py
kiara_plugin.{{ cookiecutter.project_slug }}/.github/workflows/: build-darwin.yaml  build-linux.yaml  build-windows.yaml
kiara_plugin.{{ cookiecutter.project_slug }}/ci/conda/: conda-pkg-patch.yaml
kiara_plugin.{{ cookiecutter.project_slug }}/ci/conda/kiara_plugin.{{ cookiecutter.project_slug }}/: meta.yaml.template
kiara_plugin.{{ cookiecutter.project_slug }}/docs/: index.md
kiara_plugin.{{ cookiecutter.project_slug }}/scripts/documentation/: gen_module_doc.py
kiara_plugin.{{ cookiecutter.project_slug }}/src/kiara_plugin/{{ cookiecutter.project_slug }}/: __init__.py
kiara_plugin.{{ cookiecutter.project_slug }}/src/kiara_plugin/{{ cookiecutter.project_slug }}/modules/: __init__.py
kiara_plugin.{{ cookiecutter.project_slug }}/tests/: conftest.py
kiara_plugin.{{ cookiecutter.project_slug }}/tests/job_tests/example_job_{{ cookiecutter.project_slug }}/: outputs.py
latest/: 404.html  index.html  objects.inv
latest/SUMMARY/: index.html
latest/development/: index.html
latest/development/core/: index.html
latest/info/SUMMARY/: index.html
latest/info/module_types/: index.html
latest/info/operations/: index.html
latest/packaging/: index.html
latest/reference/SUMMARY/: index.html
latest/reference/kiara_plugin/develop/__init__/: index.html
latest/reference/kiara_plugin/develop/conda/__init__/: index.html
latest/reference/kiara_plugin/develop/conda/models/: index.html
latest/reference/kiara_plugin/develop/conda/states/: index.html
latest/reference/kiara_plugin/develop/data_types/: index.html
latest/reference/kiara_plugin/develop/defaults/: index.html
latest/reference/kiara_plugin/develop/develop/: index.html
latest/reference/kiara_plugin/develop/interfaces/__init__/: index.html
latest/reference/kiara_plugin/develop/models/: index.html
latest/reference/kiara_plugin/develop/modules/__init__/: index.html
latest/reference/kiara_plugin/develop/pipelines/__init__/: index.html
latest/reference/kiara_plugin/develop/schema/__init__/: index.html
latest/reference/kiara_plugin/develop/schema/flatbuffers/: index.html
latest/reference/kiara_plugin/develop/schema/javascript/: index.html
latest/reference/kiara_plugin/develop/utils/: index.html
latest/search/: search_index.json
latest/usage/: index.html
scripts/development/: install_dev_env.sh
scripts/documentation/: gen_info_pages.py  gen_module_doc.py
src/kiara_plugin/develop/: __init__.py  data_types.py  develop.py  models.py  utils.py
src/kiara_plugin/develop/conda/: __init__.py  models.py  states.py
src/kiara_plugin/develop/interfaces/cli/: conda.py  debug.py  dev.py  pkg_build.py
src/kiara_plugin/develop/modules/: __init__.py
src/kiara_plugin/develop/pkg_build/: models.py
src/kiara_plugin/develop/pkg_build/conda/: __init__.py
src/kiara_plugin/develop/rattler/: __init__.py  states.py
src/kiara_plugin/develop/resources/templates/: meta.yaml.j2  rattler-build-recipe.yaml.j2
src/kiara_plugin/develop/schema/: __init__.py  flatbuffers.py  javascript.py
src/kiara_plugin/develop/utils/: __init__.py  pkg_utils.py
stable/development/core/: index.html
stable/packaging/: index.html
stable/reference/kiara_plugin/develop/__init__/: index.html
stable/reference/kiara_plugin/develop/conda/__init__/: index.html
stable/reference/kiara_plugin/develop/conda/models/: index.html
stable/reference/kiara_plugin/develop/conda/states/: index.html
stable/reference/kiara_plugin/develop/data_types/: index.html
stable/reference/kiara_plugin/develop/defaults/: index.html
stable/reference/kiara_plugin/develop/interfaces/__init__/: index.html
stable/reference/kiara_plugin/develop/models/: index.html
stable/reference/kiara_plugin/develop/modules/__init__/: index.html
stable/reference/kiara_plugin/develop/utils/: index.html
(+21 files in other folders)
